crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__control_flow__branching.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/reference/control_flow/branching.qasm
expect-sema: Panic
--- sema ---
ok: false
panicked: true
panic: true
errors: 0
--- asg ---
(no asg)
