crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__control_flow__loop.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/reference/control_flow/loop.qasm
expect-lex: Ok
--- source ---

while (i < 10) {
  for uint j in {1, 4, 6} reset q[j];
  if (i == 8) break;
  else continue;
}
--- lexer ---
ok: true
errors: 0
[0] Whitespace "\n" @0..1
[1] Ident "while" @1..6
[2] Whitespace " " @6..7
[3] OpenParen "(" @7..8
[4] Ident "i" @8..9
[5] Whitespace " " @9..10
[6] Lt "<" @10..11
[7] Whitespace " " @11..12
[8] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "10" @12..14
[9] CloseParen ")" @14..15
[10] Whitespace " " @15..16
[11] OpenBrace "{" @16..17
[12] Whitespace "\n  " @17..20
[13] Ident "for" @20..23
[14] Whitespace " " @23..24
[15] Ident "uint" @24..28
[16] Whitespace " " @28..29
[17] Ident "j" @29..30
[18] Whitespace " " @30..31
[19] Ident "in" @31..33
[20] Whitespace " " @33..34
[21] OpenBrace "{" @34..35
[22] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "1" @35..36
[23] Comma "," @36..37
[24] Whitespace " " @37..38
[25] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "4" @38..39
[26] Comma "," @39..40
[27] Whitespace " " @40..41
[28] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "6" @41..42
[29] CloseBrace "}" @42..43
[30] Whitespace " " @43..44
[31] Ident "reset" @44..49
[32] Whitespace " " @49..50
[33] Ident "q" @50..51
[34] OpenBracket "[" @51..52
[35] Ident "j" @52..53
[36] CloseBracket "]" @53..54
[37] Semi ";" @54..55
[38] Whitespace "\n  " @55..58
[39] Ident "if" @58..60
[40] Whitespace " " @60..61
[41] OpenParen "(" @61..62
[42] Ident "i" @62..63
[43] Whitespace " " @63..64
[44] Eq "=" @64..65
[45] Eq "=" @65..66
[46] Whitespace " " @66..67
[47] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "8" @67..68
[48] CloseParen ")" @68..69
[49] Whitespace " " @69..70
[50] Ident "break" @70..75
[51] Semi ";" @75..76
[52] Whitespace "\n  " @76..79
[53] Ident "else" @79..83
[54] Whitespace " " @83..84
[55] Ident "continue" @84..92
[56] Semi ";" @92..93
[57] Whitespace "\n" @93..94
[58] CloseBrace "}" @94..95
[59] Whitespace "\n" @95..96
