crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__control_flow__loop.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/reference/control_flow/loop.qasm
expect-parse: Ok
--- parser ---
ok: true
panicked: false
errors: 0
--- ast ---
SOURCE_FILE@0..96: 
while (i < 10) {
  for uint j in {1, 4, 6} reset q[j];
  if (i == 8) break;
  else continue;
}

WHILE_STMT@1..95: while (i < 10) {
  for uint j in {1, 4, 6} reset q[j];
  if (i == 8) break;
  else continue;
}
BIN_EXPR@8..14: i < 10
IDENTIFIER@8..9: i
LITERAL@12..14: 10
BLOCK_EXPR@16..95: {
  for uint j in {1, 4, 6} reset q[j];
  if (i == 8) break;
  else continue;
}
FOR_STMT@20..55: for uint j in {1, 4, 6} reset q[j];
SCALAR_TYPE@24..28: uint
NAME@29..30: j
FOR_ITERABLE@34..43: {1, 4, 6}
SET_EXPRESSION@34..43: {1, 4, 6}
EXPRESSION_LIST@35..42: 1, 4, 6
LITERAL@35..36: 1
LITERAL@38..39: 4
LITERAL@41..42: 6
RESET@44..55: reset q[j];
INDEXED_IDENTIFIER@50..54: q[j]
IDENTIFIER@50..51: q
INDEX_OPERATOR@51..54: [j]
EXPRESSION_LIST@52..53: j
IDENTIFIER@52..53: j
IF_STMT@58..93: if (i == 8) break;
  else continue;
BIN_EXPR@62..68: i == 8
IDENTIFIER@62..63: i
LITERAL@67..68: 8
BREAK_STMT@70..76: break;
CONTINUE_STMT@84..93: continue;
