crates/pipeline-tests/tests/snapshots/runner__tests__snippets__reference__control_flow__loop.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/reference/control_flow/loop.qasm
expect-sema: Panic
--- sema ---
ok: false
panicked: true
panic: Comparision operators other than `=` and `!=` are not supported.
errors: 0
--- asg ---
(no asg)
